third_party/move/move-compiler-v2/tests/lambda-lifting/basic.lambda.exp
// -- Model dump before bytecode pipeline
module 0xcafe::m {
    private fun map(x: u64,f: |u64|u64): u64 {
        (f)(x)
    }
    private fun no_name_clash(x: u64,c: u64): u64 {
        m::map(x, closure#1m::no_name_clash$lambda$1(c))
    }
    private fun with_name_clash1(x: u64,c: u64): u64 {
        m::map(x, closure#1m::with_name_clash1$lambda$1(c))
    }
    private fun with_name_clash2(x: u64,c: u64): u64 {
        m::map(x, closure#1m::with_name_clash2$lambda$1(c))
    }
    private fun no_name_clash$lambda$1(c: u64,y: u64): u64 {
        Add<u64>(y, c)
    }
    private fun with_name_clash1$lambda$1(c: u64,x: u64): u64 {
        Add<u64>(x, c)
    }
    private fun with_name_clash2$lambda$1(c: u64,x: u64): u64 {
        Add<u64>({
          let x: u64 = Add<u64>(c, 1);
          x
        }, x)
    }
} // end 0xcafe::m

// -- Sourcified model before bytecode pipeline
module 0xcafe::m {
    fun map(x: u64, f: |u64|u64): u64 {
        f(x)
    }
    fun no_name_clash(x: u64, c: u64): u64 {
        map(x, |arg0| no_name_clash$lambda$1(c, arg0))
    }
    fun with_name_clash1(x: u64, c: u64): u64 {
        map(x, |arg0| with_name_clash1$lambda$1(c, arg0))
    }
    fun with_name_clash2(x: u64, c: u64): u64 {
        map(x, |arg0| with_name_clash2$lambda$1(c, arg0))
    }
    fun no_name_clash$lambda$1(c: u64, y: u64): u64 {
        y + c
    }
    fun with_name_clash1$lambda$1(c: u64, x: u64): u64 {
        x + c
    }
    fun with_name_clash2$lambda$1(c: u64, x: u64): u64 {
        {
            let x = c + 1;
            x
        } + x
    }
}


Diagnostics:
error: Calls to function values other than inline function parameters not yet implemented
  ┌─ tests/lambda-lifting/basic.move:5:9
  │
5 │         f(x)
  │         ^^^^

error: Function-typed values not yet implemented except as parameters to calls to inline functions
   ┌─ tests/lambda-lifting/basic.move:10:16
   │
10 │         map(x, |y| y + c)
   │                ^^^^^^^^^

error: Function-typed values not yet implemented except as parameters to calls to inline functions
   ┌─ tests/lambda-lifting/basic.move:15:16
   │
15 │         map(x, |x| x + c)
   │                ^^^^^^^^^

error: Function-typed values not yet implemented except as parameters to calls to inline functions
   ┌─ tests/lambda-lifting/basic.move:20:16
   │
20 │           map(x, |x| {
   │ ╭────────────────^
21 │ │             let x = c + 1;
22 │ │             x
23 │ │         } + x)
   │ ╰─────────────^
